--- a/css/styles.css
+++ b/css/styles.css
@@ -1,165 +1,154 @@
-@import url('https://fonts.google.com/specimen/Ranchers?preview.text_type=custom');
-:root {
-    --main-background: #9893a5;
-    --secondary-background: #e0def4;
-    --main-text: #26233a;
-    --secondary-text: #555169;
-    --textarea-background: #f6c177;
-    --delete-button: #b4637a;
-}
-
 * {
     margin: 0;
     padding: 0;
+    font-family:'Indie Flower';
+    font-size: 8px;
 }
-
-body {
-    background-color: var(--main-background);
-}
-
-p, a, li {
-    color: var(--main-text);
-    font-family: 'Ranchers', cursive;
-    text-decoration: none;
-}
-
-a:hover {
-    color: var(--secondary-text);
-    text-decoration: underline;
-}
-
-nav {
-    background-color: var(--secondary-background);
-    text-align: right;
-    padding: 15px;
-}
-
-nav>ul {
-    list-style: none;
-}
-
-.nav>li {
-    display: inline;
-    margin: 0 10px;
-}
-
-.wrapper {
+.hj-container {
     display: grid;
-    grid-auto-rows: 200px;
-    grid-template-areas: "b a a ." "b a a .";
+    grid-template-columns:20rem 1fr;
+    grid-template-rows:5rem 1fr 5rem;
+    grid-template-areas:
+        'h h h'
+        's m m'
+        'f f f';
+    grid-gap:0px;
+    width:100vw;
+    height:100vh;
 }
 
-.new-note {
-    grid-area: a;
-    align-self: center;
-    justify-self: center;
-    margin-left: -45px;
-}    
-
-.new-note>p {
-    padding-top: 8px;
-    display: inline-block;
-}
-
-.new-note>textarea {
-    padding-top: 5px;
-    padding-left: 10px;
-    font-family: 'Ranchers', cursive;
-    background-color: var(--textarea-background);
-    color: var(--secondary-text);
-    margin-top: 300px;
-    border: none;
-}
-
-.new-note>textarea:focus {
-    outline: 3px solid var(--secondary-background);
-}
-
-.use-desktop {
-    display: none;
-}
-
-.note-buttons {
-    margin-top: 5px;
+.header {
+    grid-area: h;
+    background-color: #9893a5;
     text-align: right;
 }
-
-.note-buttons>a {
-    padding: 10px 10px;
+.top{
+    display: flex;
+    flex-direction: row;    
 }
 
-.note-buttons>.delete {
-    color: var(--delete-button);
-}
-
-.plus {
-    width: 40px;
-    height: 40px;
-    background: linear-gradient(var(--main-text), var(--main-text)), linear-gradient(var(--main-text), var(--main-text)), var(--main-background);
-    background-position: center;
-    background-size: 50% 2px, 2px 50%;
-    background-repeat: no-repeat;
-    float: left;
-}
-
-.np {
-    margin-left: -850px;
-    margin-top: 85px;
-}
-
-.hj-menu-button {
-    grid-area: b;
-    padding-left: 10px;  
-}
-.hj-menu-button>button {
-    margin-top: 10px;
-    background-color:var(--secondary-background);
-    border-color:var(--secondary-background) ; 
+.main {
+    grid-area: m;
+    background-color: #9893a5;
     
 }
 
-.hj-menu {
-    grid-area: b;
-    text-align: center;
-    background-color: var(--textarea-background);
-    min-height: 90vh;  
+.new-note {
+    grid-area: m;
+    align-self: center;
+    justify-self: center;
+    margin-left: -100px;
+    margin-top: -100px;
 }
 
+.note-list{
+
+    margin: 30px;
+}
+
+.hj-menu {
+    grid-area: s;
+    text-align: center;
+    margin-right: 1000px;
+    min-height: 90vh;
+}      
+
 .hj-menu>button {
+    margin-top: 30px;
+    margin-bottom: 15px;
+    text-decoration: solid;
+    margin-left: -150px;
+
+} 
+
+.note-buttons {
+    margin-top: 5px;
+    margin-right: -20px;
+    text-align: right;
+}
+
+li.About-header{
+    display:inline;
+}
+
+.sizes{
+    font-size:2rem;
+}
+
+.newbutton>button{
+    margin-top: 100px;
+    margin-left: -20px;
+}
+
+a:hover {
+    color:#b4637a;
+    text-decoration: underline;
+}
+a:link {
+    font-size: 3rem;
+    color: #334259;
+    list-style-type: none;
+    margin-right: 3rem;
+    text-decoration: none;
+}
+a:visited {
+    font-size: 3rem;
+    color: #334259;
+    list-style-type: none;
+    margin-right: 3rem;
+    text-decoration: none;
+}
+
+
+.nav-bar-side{
+    grid-area: s;
+    background-color: #f6c177;
+    color: #f6c177;
+    text-align: center
+
+}
+.nav-bar-side>a> button {
+
+    margin-left: 100px;
+}
+
+
+div>button{
     margin-top: 15px;
     margin-bottom: 15px;
     text-decoration: solid;
     margin-left: 50px;
     margin-right: -300px;
-    background-color:var(--textarea-background);
-    border-color:var(--secondary-background) ;
-}
-.note-list {
-    list-style-type: disc;
 }
 
-.line {
-    width: 30px;
-    height: 4px;
-    background-color: var(--secondary-text);
-    margin: 6px 0;
+li {
+    font-size: 2rem;
+    color: #575279;
+    list-style-type: none;
+    margin-right: 3rem;
 }
+
+
 
 footer {
-    background-color: var(--secondary-background);
+    grid-area: f;
+    background-color: #e0def4;
+    font-size: 14px;
     text-align: center;
-    width: 100%;
-    position: fixed;
-    bottom: 0;
-    text-align: center;
-    padding: 15px;
+    padding-top: 14px;
 }
+
+
+
 
 @media (max-width: 600px) {
     .new-note {
         display: none;
     }
-    .use-desktop {
-        display: block;
+    .nav-bar-side{
+        grid-area: s;
+        background-color: #f2e9de;
+        color: #f6c177;
     }
+    
 }
